# docs/swagger.yaml
@@ -136,6 +136,44 @@ definitions:
     - password
     - phone
     type: object
+  main.LogInPayload:
+    properties:
+      email:
+        maxLength: 255
+        type: string
+      password:
+        maxLength: 24
+        minLength: 8
+        type: string
+    required:
+    - email
+    - password
+    type: object
+  main.RegisterUserPayload:
+    properties:
+      email:
+        maxLength: 255
+        type: string
+      first_name:
+        maxLength: 100
+        type: string
+      last_name:
+        maxLength: 100
+        type: string
+      password:
+        maxLength: 24
+        minLength: 8
+        type: string
+      phone:
+        maxLength: 255
+        type: string
+    required:
+    - email
+    - first_name
+    - last_name
+    - password
+    - phone
+    type: object
   main.UpdateBookingPayload:
     properties:
       id:
@@ -282,6 +320,8 @@ definitions:
       id:
         type: integer
       last_name:
+        type: string
+      password:
         type: string
       phone:
         type: string
@@ -674,6 +714,37 @@ paths:
       summary: Updates a invoice
       tags:
       - invoices
+  /login:
+    post:
+      consumes:
+      - application/json
+      description: Handles user log in
+      parameters:
+      - description: Post payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/main.LogInPayload'
+      produces:
+      - application/json
+      responses:
+        "202":
+          description: Accepted
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema: {}
+        "401":
+          description: Unauthorized
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      summary: Handles user log in
+      tags:
+      - auth
   /payments:
     post:
       consumes:
@@ -908,6 +979,37 @@ paths:
       summary: Fetches photos by a trip id
       tags:
       - photos
+  /register:
+    post:
+      consumes:
+      - application/json
+      description: Registers a user
+      parameters:
+      - description: Post payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/main.RegisterUserPayload'
+      produces:
+      - application/json
+      responses:
+        "202":
+          description: Accepted
+          schema:
+            $ref: '#/definitions/store.User'
+        "400":
+          description: Bad Request
+          schema: {}
+        "401":
+          description: Unauthorized
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      summary: Registers a user
+      tags:
+      - auth
   /subscriptions:
     get:
       consumes:
